fixed contact form overflowing

--- a/src/app/components/contact-form/contact-form.component.scss
+++ b/src/app/components/contact-form/contact-form.component.scss
@@ -1,7 +1,7 @@
 @import "../../scss-variables/colors";
 @import "../../scss-variables/transition-duration";
 
-$min-height: 400px;
+$min-height: 600px;
 $max-height: 1200px;
 $default-height: 75vh;
 
